--- a/deployment-example/extra/deployment-and-svc_requiredDuringScheduling.yml
+++ b/deployment-example/extra/deployment-and-svc_requiredDuringScheduling.yml
@@ -37,7 +37,7 @@ spec:
         - name: nexus-registry
       containers:
         - name: js-app
-          image: registry.radut.xyz/js-app:v1
+          image: radut/js-app:v1
           env:
           - name: SOME_KEY
             value: "some-value"
