--- a/node1/Vagrantfile
+++ b/node1/Vagrantfile
@@ -2,8 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  #config.vm.box = "bento/ubuntu-16.04"
-  config.vm.box = 'ubuntu/bionic64'
+  config.vm.box = 'ubuntu/focal64'
   config.vm.hostname = "k8s-node1"
 
   config.vm.network "private_network", ip: "172.16.16.20", :adapter => 2
