--- a/node2/Vagrantfile
+++ b/node2/Vagrantfile
@@ -2,8 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  #config.vm.box = "bento/ubuntu-16.04"
-  config.vm.box = 'ubuntu/bionic64'
+  config.vm.box = 'ubuntu/focal64'
   config.vm.hostname = "k8s-node2"
 
   config.vm.network "private_network", ip: "172.16.16.21", :adapter => 2
